fix: header gap

--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,8 @@ a {
 .list {
     display: flex;
     justify-content: space-around;
-    width: 20%;
     color: white;
+    gap: 10px;
 }
 
 .logo {
@@ -73,8 +73,8 @@ a {
 .icon {
     display: flex;
     justify-content: space-around;
-    width: 20%;
     color: white;
+    gap: 10px;
 }
 
 /* /header */
